course/deploy-on-openshift/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
    env: development
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
