course/deploy-on-openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 443
  selector:
    app: my-app
  sessionAffinity: None
  type: ClusterIP
